syntax = "proto3";

package timingsystem;

import "google/protobuf/wrappers.proto";

service TimingSystem {
    rpc CreateCompetition (CreateCompetitionRequest) returns(CommandReply) {}
    rpc RegisterNextCar (RegisterNextCarRequest) returns (CommandReply) {}
    rpc Start (StartRequest) returns (CommandReply) {}
    rpc Stop (StopRequest) returns (CommandReply) {}

    rpc RedFlag (RedFlagRequest) returns (CommandReply) {}

    rpc MarkPylonTouch (RunnningCarSpecificRequest) returns (CommandReply) {}
    rpc RemovePylonTouch (RunnningCarSpecificRequest) returns (CommandReply) {}
    rpc MarkDerailment (RunnningCarSpecificRequest) returns (CommandReply) {}
    rpc RemoveDerailment (RunnningCarSpecificRequest) returns (CommandReply) {}
    rpc MarkDNF (RunnningCarSpecificRequest) returns (CommandReply) {}
    rpc MarkMissCourse (RunnningCarSpecificRequest) returns (CommandReply) {}

    rpc MarkDNFToRecord (RecordSpecificRequest) returns (CommandReply) {}
    rpc MarkMissCourseToRecord (RecordSpecificRequest) returns (CommandReply) {}
    rpc RemoveRecord(RecordSpecificRequest) returns (CommandReply) {}
    rpc RecoveryRecord (RecordSpecificRequest) returns (CommandReply) {}
    rpc ChangeRecordPylonTouchCount (ChangeRecordPylonTouchCountRequest) returns (CommandReply) {}
    rpc ChangeRecordDerailmentCount (ChangeRecordDerailmentCountRequest) returns (CommandReply) {}

    rpc SetTrackRecordType (SetTrackRecordTypeRequest) returns (CommandReply) {}
    rpc ChangeRecordType (ChangeRecordTypeRequest) returns (CommandReply) {}

    rpc GetStateTree (GetStateTreeRequest) returns (GetStateTreeReply) {}
    rpc GetRunningCars (TrackSpecificRequest) returns (GetRunningCarsResponse) {}
    rpc GetRegisteredNextCar (GetRegisteredNextCarRequest) returns (GetRegisteredNextCarReply) {}
    rpc SubscribeStateChange (SubscribeStateChangeRequest) returns(stream SubscribeStateChangeReply) {}
}

message CommandReply {
    
}

message CreateCompetitionRequest {
    uint64 timestamp = 2;
    string competitionConfigurationId = 1;
}

message RegisterNextCarRequest {
    uint64 timestamp = 3;
    string carId = 1;
    string trackId = 2;
}

message StartRequest {
    uint64 timestamp = 3;
    string trackId = 1;
}

message StopRequest {
    uint64 timestamp = 3;
    string trackId = 1;
    google.protobuf.StringValue carId = 2;
}

message RedFlagRequest {
    uint64 timestamp = 1;
    string trackId = 2;
}

message RunnningCarSpecificRequest {
    uint64 timestamp = 1;
    string trackId = 2;
    string carId = 3;
}

message RecordSpecificRequest {
    string recordId = 1;
    uint64 timestamp = 2;
}

message RemoveRecordRequest {
    string recordId = 1;
    uint64 timestamp = 2;
}

message RecoveryRecordRequest {
    string recordId = 1;
    uint64 timestamp = 2;
}

message ChangeRecordPylonTouchCountRequest {
    string recordId = 1;
    uint64 timestamp = 2;
    uint32 count = 3;
}

message ChangeRecordDerailmentCountRequest {
    string recordId = 1;
    uint64 timestamp = 2;
    uint32 count = 3;
}

message ChangeRecordTypeRequest {
    string recordId = 1;
    string record_type = 2;
    uint64 timestamp = 3;
}

message SetTrackRecordTypeRequest {
    string trackId = 1;
    string record_type = 2;
    uint64 timestamp = 3;
}

message GetCurrentTracksRequest {
    
}

message GetCurrentTracksReply {
    repeated string trackId = 1;
}

message GetStateTreeRequest {
    
}

message GetStateTreeReply {
    string state = 1;
}

message GetRegisteredNextCarRequest {
    string trackId = 1;
}

message TrackSpecificRequest {
    string trackId = 1;
}

message GetRunningCarsResponse {
    repeated string carId = 1;
}

message GetRegisteredNextCarReply {
    google.protobuf.StringValue carId = 1;
}

message GetResultsRequest {
    
}

message GetResultsReply {
    repeated TimeResult results = 1;
}

message TimeResult {
    string carId = 1;
    uint64 time = 2;
}

message SubscribeStateChangeRequest {
    
}

message SubscribeStateChangeReply {
    string state = 1;
}
